BAP-4027 page horizontal scroll fix

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/desktop/layout.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/desktop/layout.less
@@ -4,7 +4,7 @@ html, body, #page, #top-page {
   overflow: hidden; // prevents scroll bar appearance
 }
 html{
-  overflow-y: hidden;
+  overflow-x: auto;
 }
 .responsive-block{
   min-width: 350px;
