--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/main.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/main.less
@@ -1,4 +1,4 @@
-html{
+html.mobile-version {
   overflow-x: hidden;
   overflow-y: auto;
 }
